# my-claude-observation

./: .env  .gitignore  Makefile  README.md  TROUBLESHOOTING.md  docker-compose.yml  langfuse 本地部署配置.md  otel-collector-config.yaml  setup.sh
.claude/: settings.local.json
grafana/dashboards/: claudecode.json  node-overview.json  session-analysis.json  session-detail.json
grafana/provisioning/dashboards/: dashboards.yaml
lumo-main/: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
lumo-main/.github/workflows/: bump-version.yml  check.yml  publish.yml
lumo-main/.husky/: pre-commit
lumo-main/crates/daemon/: Cargo.toml  README.md  monitoring-usage.md
lumo-main/crates/daemon/src/: config.rs  main.rs  uninstall.rs
lumo-main/crates/daemon/src/handlers/: health.rs  logs.rs  metrics.rs  mod.rs  notify.rs
lumo-main/crates/daemon/src/routes/: health.rs  mod.rs  notify.rs  otlp.rs
lumo-main/crates/daemon/src/server/: app.rs  mod.rs  shutdown.rs  state.rs
lumo-main/crates/daemon/src/services/: mod.rs  otlp_parser.rs
lumo-main/crates/shared/: Cargo.toml
lumo-main/crates/shared/migrations/: 20250125000001_create_tables.sql  20250130000001_add_full_otlp_fields.sql  20250206000001_create_notifications.sql  20260315000001_create_notification_settings.sql
lumo-main/crates/shared/src/: error.rs  lib.rs
lumo-main/crates/shared/src/database/: connection.rs  mod.rs
lumo-main/crates/shared/src/database/entities/: event.rs  metric.rs  mod.rs  notification.rs  notification_setting.rs  session.rs
lumo-main/crates/shared/src/database/repositories/: event_repo.rs  metric_repo.rs  mod.rs  notification_repo.rs  notification_setting_repo.rs  session_repo.rs
lumo-main/scripts/: bump-version.js  install-daemon.sh  uninstall-daemon.sh
lumo-main/src-tauri/: Cargo.toml  build.rs  tauri.ci.conf.json  tauri.conf.json  typeshare.toml
lumo-main/src-tauri/capabilities/: default.json
lumo-main/src-tauri/icons/: icon.icns
lumo-main/src-tauri/migrations/: 20260124000001_create_users_table.sql
lumo-main/src-tauri/resources/: com.lumo.daemon.plist.template  com.lumo.daemon.service.template
lumo-main/src-tauri/src/: lib.rs
lumo-main/src-tauri/src/commands/: analytics_commands.rs  claude_session_commands.rs  daemon_commands.rs  export_commands.rs  marketplace_commands.rs  mod.rs  notification_settings_commands.rs  projects_commands.rs  session_commands.rs  skills_commands.rs  stats_commands.rs  subscription_usage_commands.rs  system_commands.rs  tools_commands.rs  trends_commands.rs  uninstall_commands.rs  usage_commands.rs  user_commands.rs  wrapped_commands.rs
lumo-main/src-tauri/src/daemon/: health.rs  manager.rs  mod.rs  plist.rs  systemd.rs
lumo-main/src-tauri/src/database/: connection.rs  mod.rs
lumo-main/src-tauri/src/database/entities/: mod.rs  user_entity.rs
lumo-main/src-tauri/src/database/repositories/: mod.rs  user_repo.rs
lumo-main/src-tauri/src/services/: analytics_service.rs  claude_config_service.rs  claude_session_service.rs  config_service.rs  marketplace_service.rs  mod.rs  notification_poller.rs  notification_settings_service.rs  projects_service.rs  session_cache.rs  session_watcher.rs  skills_service.rs  stats_service.rs  subscription_usage_service.rs  time_range.rs  tools_service.rs  trends_service.rs  usage_service.rs  wrapped_service.rs
lumo-main/src-tauri/src/types/: analytics.rs  claude_session.rs  entities.rs  marketplace.rs  mod.rs  notification_settings.rs  skills.rs  stats.rs  subscription_usage.rs  tools.rs  trends.rs  usage.rs  wrapped.rs
session-viewer/: app.py
(+1 files in other folders)
