[workspace]
members = ["crates/daemon", "crates/shared", "src-tauri"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# Type sharing
typeshare = "1.0"
uuid = { version = "1.20", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# OTLP protocol
opentelemetry-proto = { version = "0.31", features = ["gen-tonic-messages", "with-serde", "logs", "metrics"] }
prost = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
