[package]
name = "shared"
version = "0.3.1"
edition = "2021"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async
tokio.workspace = true

# Logging
tracing.workspace = true

# Utilities
dirs = "6.0"
